--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">CriminalIntent</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="date_picker_title">Date of the Crime:</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_crime">CrimeActivity</string>
+    <plurals name="subtitle_plural">
+        <item quantity="one">%1$s crime</item>
+        <item quantity="other">%1$s crimes</item>
+    </plurals>
 </resources>
